# LiU

tbmi26/A1_NeuralNetworks/: MultiLayer.ipynb  SingleLayer.ipynb  TwoLayer.ipynb  utils.py
tbmi26/A1_NeuralNetworks/Data/: lab_data.mat
tbmi26/A1_kNN/: evalFunctions.py  kNN.ipynb  utils.py
tbmi26/A2_DeepLearning/: CIFAR10-Lab.ipynb  MNIST-Demo.ipynb
tbmi26/A3_Boosting/: AdaBoost.ipynb  utils.py
tbmi26/A4_ReinforcementLearning/: QLearning.ipynb  gridworld.py  rocketworld.py  world.py
tdde05/: generated_tst.json
tdde05/air_lab2/: package.xml  setup.py
tdde05/air_lab2/air_lab2/: lab2_node.py  random_exploration.py
tdde05/air_lab3/: package.xml  setup.py
tdde05/air_lab3/air_lab3/: DockExecutor.py  DriveToExecutor.py  ExploreExecutor.py  UndockExecutor.py  tst_executor.py
tdde05/air_lab4/: package.xml  setup.cfg  setup.py
tdde05/air_lab4/air_lab4/: RecordSemanticExecutor.py  generate_tst.py  visualise_semantic_objects.py
tdde05/air_lab5/: package.xml  setup.py
tdde05/air_lab5/air_lab5/: decision_node.py  text_to_goals_node.py  tst_bring_User.json  tst_explore_unknown.json  tst_goto_Anna.json  tst_goto_Annika.json  tst_goto_Eva.json
tdde05/air_lab_common/: package.xml  setup.py
tdde05/air_lab_common/rviz/: default.rviz  rviz_config.rviz
tdde05/air_lab_common/screen/: screen.tdde05
tdde05/air_lab_interfaces/: CMakeLists.txt  package.xml
tdde05/air_lab_interfaces/msg/: .Goal.msg.swp  Goals.msg
tdde05/air_lab_interfaces/srv/: ExecuteTst.srv
tdde78/labs/lab1_value_based/starter_code/: lab1_dqn.ipynb  networks.py  replay_buffer.py
(+8 files in other folders)
